Changed the logic of overflow hidden, no longer need useEffect and useState.

--- a/src/components/Dialogue/_Dialog.scss
+++ b/src/components/Dialogue/_Dialog.scss
@@ -1,3 +1,7 @@
+// in case the page jittering when the scroll bar hides
+body {
+  width: 100vw;
+}
 // Mask layer of the dimmed background
 .dialog-cover {
   background: $dimmed-backdrop;
